Index Media, favicon

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <html>
 	<head>
 		<title>Nathan Higley</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">	
 		<link rel="stylesheet" href="css/style.css">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">	
+        <link rel="shortcut icon" href="media/smyl4.png"/>
 	</head>
 	<body>
         <center>
             <section>
+                <img src="media/smyl4.png"/>
                 <h1>Nathan Higley</h1>
                 <h2>Cyber-Security Student</h2>
                 <div>
